bk_ida/sjengida/g2/HandlePtell
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:543:49: error: use of undeclared identifier 'xmmword_41CF60'
howmuch[0] = _mm_load_si128( ( const __m128i *)&xmmword_41CF60); 
                                                ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:544:49: error: use of undeclared identifier 'xmmword_41CF70'
howmuch[1] = _mm_load_si128( ( const __m128i *)&xmmword_41CF70); 
                                                ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:679:52: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Knight %s\n", howmuch[0].m128i_i8); 
                                         ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:693:52: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Bishop %s\n", howmuch[0].m128i_i8); 
                                         ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:707:50: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Rook %s\n", howmuch[0].m128i_i8); 
                                       ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:715:51: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Queen %s\n", howmuch[0].m128i_i8); 
                                        ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:731:50: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Pawn %s\n", howmuch[0].m128i_i8); 
                                       ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:747:54: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Diagonal %s\n", howmuch[0].m128i_i8); 
                                           ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:760:19: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
strcpy( howmuch[0].m128i_i8, "mates you ( ptell me 'x' when it no longer mates you)"); 
        ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:781:19: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
strcpy( howmuch[0].m128i_i8, "is bad ( ptell me 'x' when it is no longer bad)"); 
        ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:785:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:799:19: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
strcpy( howmuch[0].m128i_i8, "mates"); 
        ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:805:19: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
strcpy( howmuch[0].m128i_i8, "is VERY good ( ptell me 'x' to play normal again)"); 
        ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:851:52: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Knight %s\n", howmuch[0].m128i_i8); 
                                         ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:865:52: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Bishop %s\n", howmuch[0].m128i_i8); 
                                         ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:879:50: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Rook %s\n", howmuch[0].m128i_i8); 
                                       ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:887:51: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Queen %s\n", howmuch[0].m128i_i8); 
                                        ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:903:50: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Pawn %s\n", howmuch[0].m128i_i8); 
                                       ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:919:54: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Diagonal %s\n", howmuch[0].m128i_i8); 
                                           ~~~~~~~~~~^~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/partner.c:934:51: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
printf( "tellics ptell Ok, Heavy %s\n", howmuch[0].m128i_i8); 
                                        ~~~~~~~~~~^~~~~~~~~
20 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/HandlePtell/src/obj/partner.o] Error 1
